# speech-recognition

./: config.py  main.py  pyproject.toml  s3_manager.py  test.py  utils.py
my_utils/: s3_manager.py  utils.py
queries/: database.py  models.py  orm.py
